adding recoil state

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+body {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   font-size: calc(10px + 2vmin);
   color: white;
+  padding-top: 50px;
 }
 
-.App-link {
-  color: #61dafb;
+.new-todo {
+  display: flex;
+  margin-top: 10px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.new-todo input {
+  flex: 1;
+  height: 25px;
+  border-radius: 5px;
+  font-size: 20px;
+  padding: 5px;
+  border: 3px solid #9a9393;
+}
+
+.new-todo button {
+  background-color: #61dafc;
+  padding: 10px;
+  border-radius: 5px;
+  font-size: 15px;
+  margin-left: 5px;
+  font-weight: 800;
+}
+
+ul {
+  list-style: none;
+  margin: 20px 0 0 0;
+  padding: 0;
+}
+
+ul li {
+  display: flex;
+  justify-content: space-between;
+  border: 2px solid #b1a8a882;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+ul li input {
+  width: 20px;
+  height: 20px;
+}
+
+ul li button {
+  background: transparent;
+  border: none;
+  color: white;
+  font-size: 20px;
+  font-weight: 800;
+}
+
+.todo-progress {
+  text-align: center;
+  margin-top: 30px;
 }
